# deep_agents

./: .env.example  README.md  main.py  pyproject.toml
docs/: architecture.md  database-schema.md  extension-guide.md  file-processing.md  human-in-the-loop.md  production-checklist.md  search-and-rag.md
examples/data/: sample_policy.md
examples/memory/: AGENTS.md
src/sample_agents/: app.py  cli_chat.py  config.py
src/sample_agents/agents/: factory.py  prompts.py  subagents.py
src/sample_agents/domain/: models.py
src/sample_agents/integrations/: models.py  search_providers.py
src/sample_agents/persistence/: memory.py  repositories.py  schema.sql  sqlite.py
src/sample_agents/services/: agent_service.py  approval_service.py  attachment_service.py  chat_service.py  workspace.py
src/sample_agents/storage/: base.py  local.py
src/sample_agents/tools/: customer_reply.py  search.py
tests/: cli.py  test_api.py  test_approval_service.py  test_attachment_service.py  test_chat_service.py  test_cli.py  test_openapi.py  test_package_data.py  test_persistence.py
