[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-agents-fastapi-sample"
version = "0.1.0"
description = "Extensible FastAPI sample app for building document-review agents with deep agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
]

[project.optional-dependencies]
openai = [
  "deepagents>=0.1.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
]
ollama = [
  "deepagents>=0.1.0",
  "langchain>=0.3.0",
  "langchain-ollama>=0.2.0",
]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
